<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IRMA CardEmu</string>
    <string name="app_name_enroll">IRMA Self Enrollment</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_reset">Load demo card</string>
	<string name="irmalogo">IRMA logo</string>
	<string name="credential_info">Card Proxy</string>
	<string name="feedback_waiting_for_card">Waiting for card</string>
    <string name="feedback_waiting_for_passport">Waiting for Passport</string>
    <string name="feedback_communicating_passport">Communicating with Passport…</string>
	<string name="pinhint">PIN</string>
	<string name="pinmessage">Please enter your IRMA pincode</string>
	<string name="connectserver">Connecting to server</string>

	<string name="title_credential_detail">Credential Detail</string>
    <string name="title_log">Log</string>

	<string name="status_idle">Tap to scan QR</string>
	<string name="status_connecting">Connecting…</string>
	<string name="status_connected">Connected to server</string>
	<string name="status_ready">Card ready</string>
	<string name="status_communicating">Communicating…</string>
	<string name="status_waitingforpin">Waiting for PIN</string>
    <string name="menu_enroll">Enroll</string>
    <string name="enroll_expl">You are about to start receiving new (base) IRMA credentials. If you already have a set of credentials, then this step might overwrite some of those.
    During this process your passport will be read remotely and the contents will be compared to the subscription information known for this phone.
    If the passport data matches the subscription data, a set of base credentials will be issued to your IRMA app.</string>
    <string name="se_welcome">IRMA self enrollment</string>
    <string name="se_connect_mno"><![CDATA[
    This process consists of the following three steps: <br/><br/>
    &nbsp;&nbsp;1.&nbsp;&nbsp;Entering some data from your passport; <br/>
    &nbsp;&nbsp;2.&nbsp;&nbsp;Reading data from your passport; <br/>
    &nbsp;&nbsp;3.&nbsp;&nbsp;Issuing the credential. <br/><br/>
    During the final process, your name, date and place of birth, and your IMSI will be transmitted to the enrollment server (%1$s).
    <br/><br/>
    Proceed?
    ]]></string>
    <string name="se_continue">Continue</string> <!-- calling this string "continue" is not allowed -->
    <string name="back">Back</string>
    <string name="abort">Abort</string>
    <string name="retry">Retry</string>
    <string name="se_connected_mno">Connected to server</string>
    <string name="se_connecting_mno">Connecting to server…</string>
    <string name="se_passport_verified">Passport data matched to subscriber data. \n Continue to MijnOverheid.nl to receive credentials.</string>
    <string name="se_connected_mijnoverheid">Connected to server</string>
    <string name="feedback_issueing">Issuing credentials…</string>
    <string name="done">Done.</string>
    <string name="clear_card">Clear card</string>
    <string name="enroll_url_menu_item">Set enroll server</string>
    <string name="enroll_url_dialog_hint">Enroll server URL</string>
    <string name="enroll_url_dialog_title">Enter the enrollment server URL</string>
    <string name="default_string">Default</string>
    <string name="step_string">Step</string>
    <string name="enroll_default_url">demo.irmacard.org</string>
    <string name="enroll_error_label">Self enrollment failed</string>
    <string name="error_nfc_notsupported">This phone does not support NFC.</string>
    <string name="error_nfc_disabled">NFC is disabled. Please enable NFC in the phone settings before using this
        feature.</string>
    <string name="error_enroll_issuing_failed">The issuing of the credential failed.</string>
    <string name="error_enroll_cantconnect">Could not connect to the enrollment server.</string>
    <string name="error_enroll_serverdied">Received no response from the enrollment server.</string>
    <string name="error_enroll_invalidresponse">The enrollment server returned an invalid response.</string>
    <string name="error_enroll_passporterror">Failed to establish contact with the passport.</string>
    <string name="error_enroll_bacfailed">The passport data you supplied seems to be wrong.</string>
    <string name="error_enroll_passport_expired">You cannot enroll with an expired identity document.</string>
    <string name="unknown_error">An unknown error occurred.</string>
    <string name="enroll_enter_bac_title">Passport data</string>
    <string name="enroll_enter_bac_desc">Please enter the following data from your passport, to allow the app
        to communicate with the passport.</string>
    <string name="menu_show_log">Show log</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="no_new_updates">No updates found.</string>
    <string name="update_server_error">Could not connect to the update server.</string>
    <string name="crash_toast_text">transmitting crash report</string>
    <string name="no_credentials">You don\'t have any credentials yet.</string>
    <string name="enroll">Enroll</string>
</resources>
