<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_reset"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_reset"/>

    <item
        android:id="@+id/enroll"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/menu_enroll"/>

    <item
        android:id="@+id/show_card_log"
        android:orderInCategory="102"
        android:title="@string/menu_show_log"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_action_history"/>

    <item
        android:id="@+id/menu_clear"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/clear_card"/>

</menu>

